# placeonix-backend

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
crates/api-contracts/: Cargo.toml
crates/api-contracts/src/: lib.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: control_schema.rs  lib.rs  tenant_schema.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/rate-limit/: Cargo.toml
crates/rate-limit/src/: lib.rs
crates/rbac/: Cargo.toml
crates/rbac/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/tenant/: Cargo.toml
crates/tenant/src/: lib.rs
crates/worker-core/: Cargo.toml
crates/worker-core/src/: lib.rs
infra/docker/: .env.example  README.md  docker-compose.yml
infra/load/: autosave_exam.js
infra/runbooks/: operations.md
migrations/control/: 0001_control_plane.sql
migrations/tenant/: 0001_rbac.sql  0002_identity.sql  0003_otp.sql  0004_org.sql  0005_files_lms.sql  0006_assessments.sql  0007_coding.sql  0008_proctor.sql  0009_analytics_notifications.sql  0010_live.sql  0011_platform_ops.sql
services/api/: Cargo.toml
services/api/src/: main.rs
services/worker-analytics/: Cargo.toml
services/worker-analytics/src/: main.rs
services/worker-judge/: Cargo.toml
services/worker-judge/src/: main.rs
services/worker-media/: Cargo.toml
services/worker-media/src/: main.rs
services/worker-proctor/: Cargo.toml
services/worker-proctor/src/: main.rs
