[workspace]
members = [
  "crates/audit",
  "crates/api-contracts",
  "crates/config",
  "crates/db",
  "crates/tenant",
  "crates/telemetry",
  "services/api",
  "services/worker-judge",
  "services/worker-proctor",
  "services/worker-media",
  "services/worker-analytics",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = "0.5"
tower-http = "0.5"
uuid = "1.8"
http = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid"] }
url = "2.5"
metrics = "0.22"
metrics-exporter-prometheus = "0.14"
opentelemetry = "0.23"
opentelemetry_sdk = "0.23"
opentelemetry-otlp = "0.16"
tracing-opentelemetry = "0.24"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
