[package]
name = "placeonix-rate-limit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
api-contracts = { path = "../api-contracts", package = "placeonix-api-contracts" }
axum.workspace = true
http.workspace = true
placeonix-config = { path = "../config", package = "placeonix-config" }
redis.workspace = true
tokio.workspace = true
