[package]
name = "placeonix-tenant"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
api-contracts = { path = "../api-contracts", package = "placeonix-api-contracts" }
axum.workspace = true
http.workspace = true
placeonix-db = { path = "../db", package = "placeonix-db" }
sqlx.workspace = true
uuid = { workspace = true, features = ["v4"] }
