[package]
name = "placeonix-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
otel = ["telemetry/otel"]
metrics = ["telemetry/metrics"]

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { workspace = true, features = ["request-id", "trace"] }
uuid = { workspace = true, features = ["v4"] }
http.workspace = true
telemetry = { path = "../../crates/telemetry", package = "placeonix-telemetry", default-features = false }
api-contracts = { path = "../../crates/api-contracts", package = "placeonix-api-contracts" }
placeonix-config = { path = "../../crates/config", package = "placeonix-config" }
