[package]
name = "placeonix-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
otel = ["telemetry/otel"]
metrics = ["telemetry/metrics"]

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "limit", "request-id", "timeout", "trace"] }
uuid = { workspace = true, features = ["v4"] }
http.workspace = true
serde.workspace = true
placeonix-audit = { path = "../../crates/audit", package = "placeonix-audit" }
telemetry = { path = "../../crates/telemetry", package = "placeonix-telemetry", default-features = false }
api-contracts = { path = "../../crates/api-contracts", package = "placeonix-api-contracts" }
placeonix-config = { path = "../../crates/config", package = "placeonix-config" }
placeonix-db = { path = "../../crates/db", package = "placeonix-db" }
placeonix-rbac = { path = "../../crates/rbac", package = "placeonix-rbac" }
placeonix-tenant = { path = "../../crates/tenant", package = "placeonix-tenant" }
