[package]
name = "placeonix-worker-analytics"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
otel = ["telemetry/otel"]
metrics = ["telemetry/metrics"]

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
telemetry = { path = "../../crates/telemetry", package = "placeonix-telemetry", default-features = false }
placeonix-config = { path = "../../crates/config", package = "placeonix-config" }
placeonix-worker-core = { path = "../../crates/worker-core", package = "placeonix-worker-core" }
